syntax = "proto3";

option go_package = "placeNote/src/gen/proto;placeNote";

import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "proto/placeNoteCommon.proto";

package placeNote;

service PostPlaceService {
    rpc AddPostPlace(AddPostPlaceRequest) returns (google.protobuf.Empty) {}
    rpc UpdatePostPlace(UpdatePostPlaceRequest) returns (google.protobuf.Empty) {}
    rpc DeletePostPlace(DeletePostPlaceRequest) returns (google.protobuf.Empty) {}
    rpc GetPostPlaceList(google.protobuf.Empty) returns  (GetPostPlaceListResponse) {}
    rpc GetPostPlaceById(GetPostPlaceByIdRequest) returns  (PostPlaceResponse) {}
}

message AddPostPlaceRequest {
    string name = 1 [(validate.rules).string.min_len = 1];
    optional string address = 2;
    optional LatLon latLon = 3;
    optional string prefectureCode = 4;
    repeated string categoryIdList = 5;
    optional string detail = 6;
    repeated string urlList = 7;
}

message UpdatePostPlaceRequest {
    string id = 1 [(validate.rules).string.min_len = 1];
    string name = 2 [(validate.rules).string.min_len = 1];
    optional string address = 3;
    optional LatLon latLon = 4;
    optional string prefectureCode = 5;
    repeated string categoryIdList = 6;
    optional string detail = 7;
    repeated string urlList = 8;
}

message DeletePostPlaceRequest {
    string id = 1 [(validate.rules).string.min_len = 1];
}

message GetPostPlaceByIdRequest {
    string id = 1 [(validate.rules).string.min_len = 1];
}

message PostPlaceResponse {
    string id = 1;
    string name = 2;
    optional string address = 3;
    optional LatLon latLon = 4;
    optional string prefectureCode = 5;
    repeated string categoryIdList = 6;
    optional string detail = 7;
    repeated string urlList = 8;
}

message GetPostPlaceListResponse {
    repeated PostPlaceResponse placeList = 1;
}
